
  * Fix RT #84210 Bad NAME in Makefile.PL (miyagawa)

  * Fix RT #82687 cpansign MANIFEST failure (myra)

  * Work on RT #41285 test failures with non-english locale (reported by srezic)

  * Skip patching the src for newWarnings style, these are the default (rurban)

  * Fix RT #53132 examples/method/Decompress.pm syntax error (kevin ryde)
    and add usage docs.

1.47 2013-03-31 rurban
----

  * Reproduced and fixed RT #41285 test failures with non-english locale
    (reported by srezic)

1.48 2013-04-01 rurban
----

  * added META records, such as repository, recommends to Makefile.PL

  * added META and POD tests

1.49 2013-04-02 rurban
----

  * Better fix for RT #41285 test failures with non-english locale
    (patched by srezic, pull #1)

  * Add t/z_*.t meta tests (now for real), move Try to t/FilterTry,
    add POD to Filter::Util::Call, Filter::Util::Exec and generated
    FilterTry.

1.50 2014-06-04 rurban
----

  * Do not re-bless already blessed filter_add arguments into the callers package.
    Fixes RT #54452
  * t/z_pod-coverage.t: omit empty Filter::decrypt (also fixes RT #84405)
  * Fix Perl Compiler detection in Filter::decrypt

1.51 2014-12-09 rurban
----

  * Minor -Wall -Wextra cleanups by jhi and me. Fixes RT #100742
  * Updated Copyright years
  * Document and warn about its limitations

1.52 2014-12-19 rurban
----

  * Fix Filter::Util::Call regression from 1.50, for filter_add({}) or filter_add([]).
    This broke Switch, see RT #101004.

1.53 2014-12-20 rurban
----

  * Re-release caused by broken SIGNATURE, caused by broken ExtUtils::Makemaker distsignature rules.
    See https://github.com/Perl-Toolchain-Gang/ExtUtils-MakeMaker/issues/177

1.54 2015-01-17 rurban
----

  * Fix some compiler warnings for -Wall. Some patches by Dave Mitchell. RT #101587
    Note that perl5 itself is not yet -pedantic safe, Filter is.

1.55 2015-07-26 rurban
----

  * Fix t/z_pod-coverage.t with old Test::More by Kent Frederik. RT #106090